--- a/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
+++ b/src/main/resources/templates/homePage/fragments/mainCourseGrid.html
@@ -11,7 +11,7 @@
                         <a href="#" class="h6 fw-light mb-0"><i class="far fa-heart"></i></a>
                     </div>
                     <h5 class="card-title"><a th:text="${course.title}"
-                            th:href="@{'/course-detail?id=' + ${course.courseId}}"></a></h5>
+                            th:href="@{'/home/course-detail?id=' + ${course.courseId}}"></a></h5>
                     <p class="mb-2 text-truncate-2" th:text="${course.description}"></p>
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item me-0 small"><i class="fas fa-star text-warning"></i></li>
