--- a/src/main/resources/templates/adminDashBoard/fragments/instructorRequestContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/instructorRequestContent.html
@@ -140,6 +140,8 @@
                         </ul>
                     </nav>
                 </div>
+                <!-- Pagination & info END -->
+
             </div>
             <!-- Instructor request table END -->
         </div>
