--- a/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent_new.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent_new.html
@@ -195,8 +195,7 @@
                                         <div
                                             class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
                                             <span><i class="bi bi-collection-play me-2"></i> Lessons</span>
-                                            <span class="badge bg-light text-dark"
-                                                th:utext="${course.totalLessons}"></span>
+                                            <span class="badge bg-light text-dark" th:utext="${course.totalLessons ?: 0}"></span>
                                         </div>
                                         <div
                                             class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
