--- a/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
@@ -34,9 +34,9 @@
         </a></li>
 
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/instructordashboard}">
-            <i class="fas fa-list"></i>
-            <span>Categories</span>
+          <a class="nav-link" th:href="@{/instructordashboard/enrolled}">
+            <i class="fas fa-user-graduate fa-fw me-1"></i>
+            <span>Students</span>
           </a>
         </li>
 
