--- a/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
@@ -48,7 +48,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/instructordashboard/notifications}">
-                        <i class="fas fa-fw fa-trophy"></i>
+                        <i class="fas fa-fw fa-comment"></i>
                         <span>notifications</span>
                     </a>
                 </li>
