--- a/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
@@ -71,17 +71,26 @@
                         <span>Orders & Payments</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/notifications}">
-                        <i class="fas fa-fw fa-trophy"></i>
-                        <span>notifications</span>
-                    </a>
-                </li>
+
                 <!-- Menu item 6 -->
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin/courseMaintenance}">
                         <i class="fas fa-fw fa-receipt"></i>
                         <span>CourseMaintenance</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/notifications}">
+                        <i class="fas fa-fw fa-comment"></i>
+                        <span>Notifications</span>
+                    </a>
+                </li>
+
+                <!-- Menu item 7 -->
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/businessRule}">
+                        <i class="fas fa-balance-scale"></i>
+                        <span>Business Rule</span>
                     </a>
                 </li>
 
