--- a/src/main/resources/templates/homePage/course-detail.html
+++ b/src/main/resources/templates/homePage/course-detail.html
@@ -451,7 +451,7 @@
 				<!-- Main navbar END -->
 
 				<!-- Profile START -->
-				<div class="dropdown ms-1 ms-lg-0">
+				<div class="dropdown ms-1 ms-lg-0" sec:authorize="isAuthenticated()">
 					<a class="avatar avatar-sm p-0" href="#" id="profileDropdown" role="button"
 						data-bs-auto-close="outside" data-bs-display="static" data-bs-toggle="dropdown"
 						aria-expanded="false">
@@ -468,8 +468,11 @@
 										alt="avatar">
 								</div>
 								<div>
-									<a class="h6" href="#">Lori Ferguson</a>
-									<p class="small m-0">example@gmail.com</p>
+									<a class="h6" href="#"
+										th:text="${#authentication.principal.userEntity.username}">Lori
+										Ferguson</a>
+									<p class="small m-0" th:text="${#authentication.principal.userEntity.email}">
+										example@gmail.com</p>
 								</div>
 							</div>
 						</li>
@@ -482,10 +485,14 @@
 						<li><a class="dropdown-item" href="#"><i class="bi bi-gear fa-fw me-2"></i>Account Settings</a>
 						</li>
 						<li><a class="dropdown-item" href="#"><i class="bi bi-info-circle fa-fw me-2"></i>Help</a></li>
-						<li><a class="dropdown-item bg-danger-soft-hover" href="#"><i
-									class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
 						<li>
-							<hr class="dropdown-divider">
+							<a class="dropdown-item bg-danger-soft-hover" th:href="@{/logout}">
+								<i class="bi bi-power fa-fw me-2"></i>
+								Sign Out
+							</a>
+						</li>
+
+						<hr class="dropdown-divider">
 						</li>
 						<!-- Dark mode options START -->
 						<li>
